<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelGuessFuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_fuel"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/valueGuessFuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="24sp"
            tools:text="10" />

        <TextView
            android:id="@+id/labelGuessCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_count"
            android:textSize="24sp"
            android:visibility="invisible"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/valueGuessCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:visibility="invisible"
            tools:text="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/labelGuessHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:text="History" />

    <EditText
        android:id="@+id/valueGuessNumber"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:hint="@string/guess_the_number"
        android:inputType="number" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/submit" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_menu"
        android:visibility="invisible" />

</LinearLayout>